agregando docker file, pom y calses faltantes